--- a/home.html
+++ b/home.html
@@ -7,6 +7,23 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <button id="blog-btn">Blog</button>
+            <div class="logo">
+                <img id="img-logo" src="./images/logo (1).png" alt="logo">
+                <h2>Donate Bangladesh</h2>
+            </div>
+            <div class="balance">
+                <img style="padding-right: 10px;" id="img-balance" src="./images/coin.png" alt="coin">
+                <h3 style="padding-right: 5px;;">5900</h3>
+                <h3>BDT</h3>
+            </div>
+        </nav>
+        <div class="main-btns">
+            <button style="background-color: rgb(255, 20, 243);color: black;" class="btn-main">Donation</button>
+            <button class="btn-main">History</button>
+        </div>
+    </header>
 </body>
 </html>
