--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <header>
+    <!-- <header>
         <nav>
             <button id="blog-btn">Blog</button>
             <div class="logo">
@@ -24,6 +24,21 @@
             <button style="background-color: rgb(255, 20, 243);color: black;" class="btn-main">Donation</button>
             <button class="btn-main">History</button>
         </div>
-    </header>
+    </header> -->
+
+
+
+
+
+
+
+<button id="baa">ب</button>
+<script>
+    let audio= new Audio('./audio/baa.mp3');
+    document.getElementById('baa').addEventListener('click',function(){
+        audio.play();
+    })
+</script>
+
 </body>
 </html>
