--- a/index.html
+++ b/index.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Donation</title>
+    <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, iure hic voluptate ipsa facilis laudantium fugiat numquam illum. Impedit cum quod, porro cumque blanditiis tenetur dolores sed quis expedita accusantium exercitationem enim dicta voluptatibus facere eveniet aperiam! Tempore, quam unde?
+    <!-- <header>
+        <nav>
+            <button id="blog-btn">Blog</button>
+            <div class="logo">
+                <img id="img-logo" src="./images/logo (1).png" alt="logo">
+                <h2>Donate Bangladesh</h2>
+            </div>
+            <div class="balance">
+                <img style="padding-right: 10px;" id="img-balance" src="./images/coin.png" alt="coin">
+                <h3 style="padding-right: 5px;;">5900</h3>
+                <h3>BDT</h3>
+            </div>
+        </nav>
+        <div class="main-btns">
+            <button style="background-color: rgb(255, 20, 243);color: black;" class="btn-main">Donation</button>
+            <button class="btn-main">History</button>
+        </div>
+    </header> -->
+
+
+
+
+
+
+
+<button id="baa">ب</button>
+<script>
+    let audio= new Audio('./audio/baa.mp3');
+    document.getElementById('baa').addEventListener('click',function(){
+        audio.play();
+    })
+</script>
+
 </body>
 </html>
