--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <button id="baa">ب</button>
 <script>
-    let audio= new Audio('./audio/baa.mp3');
+    let audio= new Audio('./assets/baa.mp3');
     document.getElementById('baa').addEventListener('click',function(){
         audio.play();
     })
