--- a/index.html
+++ b/index.html
@@ -7,38 +7,108 @@
     <link rel="stylesheet" href="home.css">
 </head>
 <body>
-    <!-- <header>
+    <header>
         <nav>
-            <button id="blog-btn">Blog</button>
+            <button class="btn"  id="blog-btn">Blog</button>
             <div class="logo">
                 <img id="img-logo" src="./images/logo (1).png" alt="logo">
                 <h2>Donate Bangladesh</h2>
             </div>
             <div class="balance">
-                <img style="padding-right: 10px;" id="img-balance" src="./images/coin.png" alt="coin">
+                <img style="padding-right: 10px;" class="img-balance" src="./images/coin.png" alt="coin">
                 <h3 style="padding-right: 5px;;">5900</h3>
                 <h3>BDT</h3>
             </div>
         </nav>
         <div class="main-btns">
-            <button style="background-color: rgb(255, 20, 243);color: black;" class="btn-main">Donation</button>
-            <button class="btn-main">History</button>
+            <button style="background-color: rgb(255, 0, 149);color: black;" class="btn-main btn">Donation</button>
+            <button class="btn-main btn">History</button>
         </div>
-    </header> -->
+    </header>
+
+    <main>
+        <div class="noakhali">
+            <div class="img-noakhali">
+                <img src="./images/noakhali.png" alt="">
+            </div>
+            <div class="text-noakhali">
+                <div class="amount">
+                    <img style="padding-right: 10px;" src="./images/coin.png" alt="">
+                <h3 style="padding-right: 5px;;">0</h3>
+                <h3>BDT</h3>
+                </div>
+                <h2>Donate for Flood at Noakhali, Bangladesh</h2>
+                <p> The recent floods in Noakhali have caused significant damage to
+                    homes infrastructure. Your donation will help provide essential
+                    supplies and to those affected by this disaster. Every contribution,
+                    big or small, makes difference. Please join us in supporting the relief
+                    efforts and making a positive impact on the lives of those in need.</p>
+                <input class="input" placeholder="Enter Donation Amount" type="number"><br>
+                <button class="donate-now btn">Donate Now</button> 
+            </div>
+        </div>
+
+        <div class="noakhali">
+            <div class="img-noakhali">
+                <img src="./images/feni.png" alt="">
+            </div>
+            <div class="text-noakhali">
+                <div class="amount">
+                    <img style="padding-right: 10px;" src="./images/coin.png" alt="">
+                <h3 style="padding-right: 5px;;">0</h3>
+                <h3>BDT</h3>
+                </div>
+                <h2>Donate for Flood Relief in Feni,Bangladesh</h2>
+                <p>The recent floods in Feni have devastated local communities, leading
+                    to severe disruption and loss. Your generous donation will help
+                    provide immediate aid, including food, clean water, and medical
+                    supplies, to those affected by this calamity. Together, we can offer
+                    crucial support and help rebuild lives in the aftermath of this disaster.
+                    Every contribution counts towards making a real difference. Please
+                    consider donating today to assist those in urgent need.</p>
+                <input class="input" placeholder="Enter Donation Amount" type="number"><br>
+                <button class="donate-now btn">Donate Now</button> 
+            </div>
+        </div>
+
+        <div class="noakhali">
+            <div class="img-noakhali">
+                <img src="./images/quota-protest.png" alt="">
+            </div>
+            <div class="text-noakhali">
+                <div class="amount">
+                    <img style="padding-right: 10px;" src="./images/coin.png" alt="">
+                <h3 style="padding-right: 5px;;">0</h3>
+                <h3>BDT</h3>
+                </div>
+                <h2>Aid for Injured in the Quota Movement</h2>
+                <p>The recent Quota movement has resulted in numerous injuries and
+                    significant hardship for many individuals. Your support is crucial in
+                    providing medical assistance, rehabilitation, and necessary supplies
+                    to those affected. By contributing, you help ensure that injured
+                    individuals receive the care and support they need during this
+                    challenging time. Every donation plays a vital role in alleviating their
+                    suffering and aiding in their recovery. Please consider making a
+                    donation to support these brave individuals in their time of need.</p>
+                <input class="input" placeholder="Enter Donation Amount" type="number"><br>
+                <button class="donate-now btn">Donate Now</button> 
+            </div>
+        </div>
+    </main>
 
 
 
 
 
 
-
-<button id="baa">ب</button>
+<!-- 
+ <button id="baa">ب</button>
 <script>
     let audio= new Audio('./assets/baa.mp3');
     document.getElementById('baa').addEventListener('click',function(){
         audio.play();
     })
-</script>
+</script>  -->
 
 </body>
 </html>
